--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 	<p> Q1. Who holds the single-game record for most points scored?  
 
-	<form action="">
+	<form id = "form1">
 		<input type="radio" name="question1" value="Patrick"> Patrick Ewing <br>
 		<input type="radio" name="question1" value="Larry"> Larry Bird <br>
 		<input type="radio" name="question1" value="Bill"> Bill Russell <br>
@@ -31,7 +31,7 @@
 
 	<p> Q2. Which team won the 2016 Championship?
 	
-	<form action="">
+	<form id = "form1">
 		<input type="radio" name="question2" value="CHI"> Chicago Bulls <br>
 		<input type="radio" name="question2" value="GSW"> Golden State Warriors <br>
 		<input type="radio" name="question2" value="CLE"> Cleveland Cavaliers <br>
@@ -43,7 +43,7 @@
 	</p> Q3. Who is currently the NBA commissioner?
 
 
-	<form action="">
+	<form id = "form1">
 		<input type="radio" name="question3" value="Adam"> Adam Silver <br>
 		<input type="radio" name="question3" value="Nate"> Nate Silver <br>
 		<input type="radio" name="question3" value="Larry"> Larry O'Brien <br>
@@ -54,7 +54,7 @@
 
 	<p> Q4. Who was the first selection in the 2016 NBA draft?
 
-	<form action="">
+	<form id = "form1">
 		<input type="radio" name="question4" value="Ben"> Ben Simmons <br>
 		<input type="radio" name="question4" value="Brandon"> Brandon Ingram <br>
 		<input type="radio" name="question4" value="Anthony"> Anthony Davis <br>
@@ -65,13 +65,15 @@
 
 	<p> Q5. Who has the scored the most career points?
 
-	<form action="">
+	<form id = "form1">
 		<input type="radio" name="question5" value="Kobe"> Kobe Bryant <br>
 		<input type="radio" name="question5" value="Malone"> Karl Malone <br>
 		<input type="radio" name="question5" value="Michael"> Michael Jordan <br>
 		<input type="radio" name="question5" value="Kareem"> Kareem Abdul-Jabbar <br>
 
 	</form>
+	<button onclick = "javascript: alert(getScore())"> Click for score </button>
+	</p>	
 	</p>
 	
 
