--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 	<form class = "form1">
 
 	<div class="questions">
-		<input type="radio" name="answer1" value="Patrick"> Patrick Ewing <br>
-		<input type="radio" name="answer1" value="Larry"> Larry Bird <br>
-		<input type="radio" name="answer1" value="Bill"> Bill Russell <br>
-		<input type="radio" name="answer1" value="Wilt"> Wilt Chamberlain <br>
+		<input type="radio" name="question1" value="Patrick"> Patrick Ewing <br>
+		<input type="radio" name="question1" value="Larry"> Larry Bird <br>
+		<input type="radio" name="question1" value="Bill"> Bill Russell <br>
+		<input type="radio" name="question1" value="Wilt"> Wilt Chamberlain <br>
 	</div>
 
 	</form>
@@ -92,13 +92,15 @@
 	</form>
 
 	</div>
+	<br>
+	<br>
+	<div id=answerDiv> </div>
 
-
-
+<!-- 
 	<button id="scoreButton" onclick = "javascript: alert(getScore())"> Click for score </button>
 	</p>	
 	</p>
-	</div>
+	</div> -->
 
 
 
