--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<input type="radio" name="question3" value="Adam"> Adam Silver <br>
 		<input type="radio" name="question3" value="Nate"> Nate Silver <br>
 		<input type="radio" name="question3" value="Larry"> Larry O'Brien <br>
-		<input type="radio" name="question3" value="Daivd"> David Stern <br>
+		<input type="radio" name="question3" value="David"> David Stern <br>
 	</div>
 
 	</form>
